# gaudi-graphtransformer

./: .gitignore  README.md  data_utils.py  dataset.py  eval.py  main-batch.py  main.py  models.py  nodeformer.py  ours.py  parse.py  requirements_docker.txt  run.sh
Habana_spmm_kernel/: CMakeLists.txt  Makefile  autoshell.sh  sparse_matrix_mul_fwd_f32.c
Habana_spmm_kernel/kernels/gaudi/: kernel_config.h  matrix_mul_fwd_f32.c  sparse_matrix_mul_fwd_f32.bc  sparse_matrix_mul_fwd_f32.c
Habana_spmm_kernel/kernels/gaudi2/: sparse_matrix_mul_fwd_f32.c
Habana_spmm_kernel/src/: CMakeLists.txt  entry_points.cpp  entry_points.hpp
Habana_spmm_kernel/src/gaudi2_src/: sparse_matrix_mul_fwd_f32.cpp  sparse_matrix_mul_fwd_f32.hpp
Habana_spmm_kernel/src/gaudi_src/: matrix_mul_fwd_f32.cpp  sparse_matrix_mul_fwd_f32.cpp
Habana_spmm_kernel/tests/: CMakeLists.txt  tests_main.cpp
Habana_spmm_kernel/tests/gaudi2_test/: sparse_matrix_mul_fwd_f32_test.cpp  sparse_matrix_mul_fwd_f32_test.hpp
Habana_spmm_kernel/tests/gaudi_test/: matrix_mul_fwd_f32_test.cpp  sparse_matrix_mul_fwd_f32_test.cpp  sparse_matrix_mul_fwd_f32_test.hpp
Habana_spmm_kernel/tests/implementation/: sparse_matrix_mul_fwd_f32_test.cpp  sparse_matrix_mul_fwd_f32_test.hpp
results/: citeseer_ours_gcn.txt  cora_ours_gcn.txt  pubmed_ours_gcn.txt
